--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-        <a href="/logout/" class="btn btn-danger float-right" style="margin-left: 5px;">Logout</a>
+        <a href="#!" class="btn btn-danger float-right" id="logout" style="margin-left: 5px;">Logout</a>
         <a href="#!" class="btn btn-success float-right" data-toggle="modal" data-target="#modal-add">Add New</a>
         <br /><br /><br />
         <table class="table table-striped">
