--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,12 +1,10 @@
 <form class="text-center">
     <img class="mb-4" src="/img/login.png" />
     <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
-    <label for="username" class="sr-only">Username</label>
-    <input type="text" id="username" class="form-control" placeholder="Username" required />
     <label for="password" class="sr-only">Password</label>
     <input type="password" id="password" class="form-control" placeholder="Password" required>
     <div class="invalid-feedback">
-        The username or password was invalid.
+        The password was invalid.
     </div>
     <br />
     <button class="btn btn-lg btn-primary btn-block" type="button">Login</button>
